--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <footer>
             <p class="text-white font-extralight p-2">Website developed by <a class="underline"
                     href="https://github.com/halderkendrick">Kendrick Halder</a>.
-                <a href="https://github.com/Yakiyo/Yakiyo.github.io" class="underline">Source Code</a>
+                <a href="https://github.com/halderkendrick/Portfolio" class="underline">Source Code</a>
             </p>
         </footer>
 </body>
