--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                     <a target="_blank" href="https://discords.com/bio/p/kendrickburton"
                         class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
                             class="fa-brands fa-discord"></i></a>
+                    <a target="_blank" href="https://www.facebook.com/kendrick.halder"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-facbook"></i></a>
+
                 </div>
             </div>
         </div>
