--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             class="fa-brands fa-discord"></i></a>
                     <a target="_blank" href="https://www.facebook.com/kendrick.halder"
                         class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
-                            class="fa-brands fa-facbook"></i></a>
+                            class="fa-brands fa-facebook"></i></a>
 
                 </div>
             </div>
