--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
                     <a target="_blank" href="https://www.facebook.com/kendrick.halder"
                         class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
                             class="fa-brands fa-facebook"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/halderkendrick/"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-instagram"></i></a>
 
                 </div>
             </div>
