--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <p class="font-extralight text-lg py-2">
                     Hey there! I am Kendrick Connery Halder Aurk. I'm currently an
                     undergraduate
-                    student studying <a class="underline" target="_blank" href="https://cse.uiu.ac.bd/">CSE in
-                        United International University (UIU)</a>. <br>
+                    student studying <a target="_blank" href="https://cse.uiu.ac.bd/"><b><i>CSE in
+                        United International University (UIU)</i></b></a>. <br>
                     I am a self taught developer and am passionate about programming. I'm always excited exploring
                     different fields related to programming and software development in general. Hoping to pursue a
                     career in software
@@ -75,13 +75,6 @@
                     <a target="_blank" href="https://discords.com/bio/p/kendrickburton"
                         class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
                             class="fa-brands fa-discord"></i></a>
-                    <a target="_blank" href="https://www.facebook.com/kendrick.halder"
-                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
-                            class="fa-brands fa-facebook"></i></a>
-                    <a target="_blank" href="https://www.instagram.com/halderkendrick/"
-                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
-                            class="fa-brands fa-instagram"></i></a>
-
                 </div>
             </div>
         </div>
@@ -90,7 +83,7 @@
         <footer>
             <p class="text-white font-extralight p-2">Website developed by <a class="underline"
                     href="https://github.com/halderkendrick">Kendrick Halder</a>.
-                <a href="https://github.com/halderkendrick/Portfolio" class="underline">Source Code</a>
+                <a href="https://github.com/Yakiyo/Yakiyo.github.io" class="underline">Source Code</a>
             </p>
         </footer>
 </body>
