--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
                 </p>
                 <!-- Social icons -->
                 <div class="flex flex-row pt-3">
+                    <a target="_blank" href="https://www.facebook.com/kendrick.halder"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-facebook"></i></a>
+                    <a target="_blank" href="https://www.instagram.com/halderkendrick/"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-instagram"></i></a> 
+                    <a target="_blank" href="https://x.com/HalderKendrick"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-twitter"></i></a>               
                     <a target="_blank" href="https://github.com/halderkendrick"
                         class="text-3xl pl-2 pr-5 transition ease-in-out hover:scale-125"><i
                             class="fa-brands fa-github"></i></a>
