--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <p class="text-3xl py-2">Skills</p>
 
                 <ul class="list-disc list-outside">
-                    <li class="font-extralight text-lg py-2">Frontend frameworks like Svelte, React</li>
+                    <li class="font-extralight text-lg py-2">HTML, CSS, JS, React.js, C, Figma</li>
+                    <li class="font-extralight text-lg py-2">Frontend frameworks like React</li>
                     <li class="font-extralight text-lg py-2">Git & Github</li>
                 </ul>
             </div>
