--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                     Hey there! I am Kendrick Connery Halder Aurk. I'm currently an
                     undergraduate
                     student studying <a target="_blank" href="https://cse.uiu.ac.bd/"><b><i>CSE in
-                        United International University (UIU)</i></b></a>. <br>
-                    I am a self taught developer and am passionate about programming. I'm always excited exploring
+                        United International University (UIU)</i></b></a>. <br><br>
+                    I learned Front-End Development with from <a target="_blank" href="https://www.creativeitinstitute.com/courses/front-end-development-with-react"><b><i>Creative IT Institute</i></b></a> and I'm passionate about programming. I'm always excited exploring
                     different fields related to programming and software development in general. Hoping to pursue a
                     career in software
                     development in the future.
@@ -57,7 +57,7 @@
                 <p class="text-3xl py-2">Skills</p>
 
                 <ul class="list-disc list-outside">
-                    <li class="font-extralight text-lg py-2">HTML, CSS, JS, React.js, C, Figma</li>
+                    <li class="font-extralight text-lg py-2">HTML, CSS, JS, React.js, C, Figma, Bootstrap</li>
                     <li class="font-extralight text-lg py-2">Frontend frameworks like React</li>
                     <li class="font-extralight text-lg py-2">Git & Github</li>
                 </ul>
