--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     undergraduate
                     student studying <a target="_blank" href="https://cse.uiu.ac.bd/"><b><i>CSE in
                         United International University (UIU)</i></b></a>. <br><br>
-                    I learned Front-End Development with from <a target="_blank" href="https://www.creativeitinstitute.com/courses/front-end-development-with-react"><b><i>Creative IT Institute</i></b></a> and I'm passionate about programming. I'm always excited exploring
+                    I learned Front-End Development with React from <a target="_blank" href="https://www.creativeitinstitute.com/courses/front-end-development-with-react"><b><i>Creative IT Institute</i></b></a> and I'm passionate about programming. I'm always excited exploring
                     different fields related to programming and software development in general. Hoping to pursue a
                     career in software
                     development in the future.
