--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name='theme-color' content='#5f4bb7' />
     <meta property='twitter:title' content="Kendrick Halder" />
     <meta property='twitter:description' content='Student/Developer' />
-    <meta property='twitter:image' content='https://yakiyo.github.io/favicon.png' />
-    <link rel='icon' type='image/png' href='./favicon.png' />
+    <meta property='twitter:image' content='https://avatars.githubusercontent.com/u/108589219?v=4' />
+    <link rel='icon' type='image/png' href='./icon.jpg' />
 </head>
 
 <body class="bg-[#a5b4fc]">
