--- a/index.html
+++ b/index.html
@@ -81,7 +81,13 @@
                             class="fa-brands fa-twitter"></i></a>  
                     <a target="_blank" href="https://bd.linkedin.com/"
                         class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
-                            class="fa-brands fa-linkedin"></i></a>                     
+                            class="fa-brands fa-linkedin"></i></a>
+                    <a target="_blank" href="https://www.pinterest.com/halderkendrick/"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-pinterest"></i></a>
+                    <a target="_blank" href="https://www.youtube.com/@kendrickhalder"
+                        class="text-3xl pr-5 transition ease-in-out hover:scale-125"><i
+                            class="fa-brands fa-youtube"></i></a>                                       
                     <a target="_blank" href="https://github.com/halderkendrick"
                         class="text-3xl pl-2 pr-5 transition ease-in-out hover:scale-125"><i
                             class="fa-brands fa-github"></i></a>
