--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
         <div class="flex flex-col sm:flex-row w-[100%] justify-evenly items-center pb-10">
             <!-- Avatar section -->
             <div class="w-72 h-72">
+                <p class="text-5xl py-2">Welcome to My Website</p>
                 <!-- credits to the image -->
                     <img src="img1.jpg" alt="avatar" class="rounded-md w-72 h-72 object-cover">
                 </a>
-            </div>
+            </div><br><br><br>
             <!-- Description section -->
             <div class="flex flex-col justify-evenly items-start sm:w-[50%] h-[100%] py-5">
                 <p class="text-5xl py-2">Kendrick Halder</p>
