--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
                     different fields related to programming and software development in general. Hoping to pursue a
                     career in software
                     development in the future.
-                </p>
+                </p><br><br>
+                <p class="text-3xl py-2">Education Backgroud</p>
+
+                <ul class="list-disc list-outside">
+                    <li class="font-extralight text-lg py-2" style="list-style: none;">S.S.C at <a target="_blank" href="https://www.milestonecollege.com/"><i><b>Milestone School and College</b></i></a></li>
+                    <li class="font-extralight text-lg py-2" style="list-style: none;">H.S.C at <a target="_blank" href="https://www.milestonecollege.com/"><i><b>Milestone College</b></i></a></li>
+                    <li class="font-extralight text-lg py-2" style="list-style: none;">B.Sc in CSE at <a target="_blank" href="https://www.uiu.ac.bd/"><i><b>United International University</b></i></a></li>
+                </ul>
             </div>
         </div>
 
