--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     career in software
                     development in the future.
                 </p><br><br>
-                <p class="text-3xl py-2">Education Backgroud</p>
+                <p class="text-3xl py-2">Education Background</p>
 
                 <ul class="list-disc list-outside">
                     <li class="font-extralight text-lg py-2" style="list-style: none;">S.S.C at <a target="_blank" href="https://www.milestonecollege.com/"><i><b>Milestone School and College</b></i></a></li>
