--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <meta property='twitter:image' content='https://avatars.githubusercontent.com/u/108589219?v=4' />
+    <link rel='icon' type='image/png' href='./icon.jpg' />
     <style>
     * {box-sizing: border-box}
         body {font-family: Verdana, sans-serif; margin:0}
