--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
             <a href="https://www.instagram.com/halderkendrick/" target="_blank" class="text-3xl"><i class="fa-brands fa-instagram"></i></a>
             <a href="https://x.com/HalderKendrick" target="_blank" class="text-3xl"><i class="fa-brands fa-twitter"></i></a>
             <a href="https://bd.linkedin.com/" target="_blank" class="text-3xl"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="wa.me/8801810140852" target="_blank" class="text-3xl"><i class="fa-brands fa-whatsapp"></i></a>
             <a href="https://github.com/halderkendrick" target="_blank" class="text-3xl"><i class="fa-brands fa-github"></i></a>
         </div>
     </div>
