--- a/index.html
+++ b/index.html
@@ -117,6 +117,19 @@
         }
     </style>
 </head>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/680f8f8ff0eef1190a3f9538/1ipuchii3';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 <body class="flex flex-col items-center justify-center px-5">
     <div class="text-center py-10">
         <h1 class="text-5xl font-semibold">Welcome to My Website</h1>
@@ -126,7 +139,7 @@
             <img src="img1.jpg" alt="avatar" class="rounded-full w-60 h-60 object-cover shadow-lg">
             <p class="text-xl mt-3 font-medium">Kendrick Halder</p>
             <div class="mt-5">
-                <a href="https://drive.google.com/file/d/1mxib1WHMdF6-x7szEeruL8MpBH2e_rq4/view?usp=sharing" download class="bg-white text-gray-800 px-6 py-2 rounded-full shadow-lg hover:bg-gray-100 transition duration-300" target="_blank">
+                <a href="Kendrick_Halder_Resume.pdf" download class="bg-white text-gray-800 px-6 py-2 rounded-full shadow-lg hover:bg-gray-100 transition duration-300" target="_blank">
                     <i class="fa-solid fa-download mr-2"></i>Download Resume
                 </a>
             </div>
