--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <img src="img1.jpg" alt="avatar" class="rounded-full w-60 h-60 object-cover shadow-lg">
             <p class="text-xl mt-3 font-medium">Kendrick Halder</p>
             <div class="mt-5">
-                <a href="Kendrick_Halder_Resume.pdf" download class="bg-white text-gray-800 px-6 py-2 rounded-full shadow-lg hover:bg-gray-100 transition duration-300" target="_blank">
+                <a href="https://drive.google.com/file/d/1mxib1WHMdF6-x7szEeruL8MpBH2e_rq4/view?usp=sharing" download class="bg-white text-gray-800 px-6 py-2 rounded-full shadow-lg hover:bg-gray-100 transition duration-300" target="_blank">
                     <i class="fa-solid fa-download mr-2"></i>Download Resume
                 </a>
             </div>
